# project_template

./: README.md  dc  update_template.sh
django_nextjs_template/: .gitignore  .gitignore.template  dc
django_nextjs_template/.devcontainer/: devcontainer.json
django_nextjs_template/.github/: dependabot.yml
django_nextjs_template/backend/: .pylintrc  Dockerfile  Dockerfile.prod  manage.py  pyproject.toml  s3_backup.py
django_nextjs_template/backend/application/: admin.py  api.py  asgi.py  backends.py  project_settings.py  s3_storage.py  settings.py  settings_helper.py  urls.py  worker.py
django_nextjs_template/backend/users/: admin.py  api.py  models.py  schema.py
django_nextjs_template/backend/users/migrations/: 0001_initial.py
django_nextjs_template/deploy/: Dockerfile.playwright  deploy.py  deploy.sh  deploy_balancer.py  deploy_balancer.sh  env.base  generate_certs.sh  initinfra.py  production_setup.py  production_setup.sh  tmux_dev.sh  update_hosts.sh
django_nextjs_template/dev-scripts/: Dockerfile  certbot_renew.sh  deploy.sh  do_init.py  do_utils.py  env.base  env.dev  env.prod  env.prod.template  env.stage  generate_certs.sh  init_certbot.sh  manage_prod.sh  production_setup.sh  setup_docker_debian.sh  swarm_deploy.sh  tmux_dev.sh
django_nextjs_template/docker/: common.yml  dev.yml  prod.yml
django_nextjs_template/environment/: env.base  env.dev  env.prod
django_nextjs_template/nginx/: Dockerfile
django_nextjs_template/spa/: .eslintrc.js  Dockerfile  Dockerfile.prod  constants.ts  global.ts  instrumentation-client.ts  instrumentation.ts  (+9 more)
(+43 files in other folders)
